--- a/css/style.css
+++ b/css/style.css
@@ -1,88 +1,15 @@
-body {
-  margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-}
+@import "./global/global.css";
+@import "./home/introducao.css";
 
-ul {
-  padding: 0px;
-  margin: 0px; 
-  list-style: none;
-}
+@import "./global/header.css";
 
-a {
-  text-decoration: none;
-}
+/* Utilidades */
+@import "./utilidades/componentes.css"; 
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: center;
-  padding: 20px;
-  gap: 20px;
-  box-sizing: border-box;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
+/* Home */
+@import "./utilidades/tipografia.css"; 
 
-.header-menu {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px;
-}
-
-.header-menu a {
-  color: #ffffff;
-  padding: 16px 0px;
-  display: inline-block;
-  font-size: 18px; 
-  position: relative;
-}
-
-.header-menu a::after{
-  content: ""; 
-  display: block;
-  height: 2px;
-  width: 0;
-  background: #ffffff;
-  margin-top: 4px;
-  transition: 0.3s;
-  position: absolute;
-}
-
-.header-menu a:hover:after {
-  width: 100%;
-}
+@import "./utilidades/cores.css"; 
 
 
-.header-bg {
-  background-color: #000000;
-}
 
-@media (max-width: 800px) {
-  .header-menu {
-    gap: 20px; 
-  }
-  .header-menu a {
-    background: #111;
-    padding: 12px 16px;
-    border-radius: 4px;
-  }
-  .header-menu a:hover{
-    background: #2e2e2e;
-  }
-  .header a:after {
-    display: none;
-  }
-}
-
-@media (max-width: 600px) {
-  .header-menu {
-    gap: 12px;
-  }
-  .header-menu a{
-    padding: 8px 12px; 
-    font-size: 14px; 
-  }
-}
