--- a/css/global/global.css
+++ b/css/global/global.css
@@ -4,6 +4,7 @@ body {
   color: #111;
 }
 
+
 ul {
   padding: 0px;
   margin: 0px;
@@ -20,7 +21,14 @@ img {
   display: block;
 }
 
+img[src$=".jpg"] {
+  border-radius: 4px;
+}
+
 h1,
+h2,
+h3,
+h4
 ul,
 p {
   margin: 0px;
