Adicionando parte de Tecnologia

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
 
 @import "./utilidades/cores.css"; 
 
+@import "./home/tecnologia.css";
+
 /* Biciletas */ 
 
 @import "./bicicletas/bicicletas-listas.css"; 
