--- a/css/bicicletas/bicicletas-listas.css
+++ b/css/bicicletas/bicicletas-listas.css
@@ -6,19 +6,21 @@
 
 .bicicletas-lista h2 {
  margin-bottom: 40px;
- max-width: 1200px;
- padding-left: 20px;
- padding-right: 20px;
- box-sizing: border-box;
 }
 
 .bicicletas-lista ul {
   display: flex;
   gap: 40px;
-  padding: 0 20px;
+  padding: 0 20px 20px 20px;
   max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
+  overflow-x: auto;
+}
+
+.bicicletas-lista li {
+  flex: 1;
+  min-width: 280px;
 }
 
 .bicicletas-lista a {
@@ -42,9 +44,23 @@
   display: inline-block;
   background: var(--cor-p1); 
   margin-right: 8px;
+  transition: 0.2s;
+}
+
+.bicicletas-lista a:hover h3::before {
+  width: 24px;
 }
 
 
 .bicicletas-lista li span {
   padding-left: 20px;
+}
+
+@media (max-width: 800px) {
+  .bicicletas-lista {
+    padding-bottom: 60px;
+  }
+  .bicicletas-lista ul {
+    gap: 20px;
+  }
 }
