--- a/css/global/header.css
+++ b/css/global/header.css
@@ -3,14 +3,8 @@
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
-  padding: 20px;
+  padding-top: 20px;
   gap: 20px;
-  box-sizing: border-box;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  font-family: 'Poppins';
-  font-weight: 400;
 }
 
 .header-menu {
